--- a/package.json
+++ b/package.json
@@ -1,19 +1,45 @@
 {
-  "name": "react-employee-directory",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "employeedirectory",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "https://mlanglois333.github.io/React-Employee-Directory/",
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
+    "babel": "^6.23.0",
+    "babel-install": "^2.1.0",
+    "bootstrap": "^4.5.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.0",
+    "web-vitals": "^0.2.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mlanglois333/React-Employee-Directory.git"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mlanglois333/React-Employee-Directory/issues"
-  },
-  "homepage": "https://github.com/mlanglois333/React-Employee-Directory#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
